...
                app:icon="@drawable/ic_export"
                app:iconTint="@color/cos_black"
                app:iconSize="24dp"
                android:contentDescription="Export"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calender"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:icon="@drawable/ic_calendar"
                app:iconTint="@color/cos_black"
                app:iconSize="24dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--일기 추가 float버튼    -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_plus_white"
        android:contentDescription="Add"
...
