...
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:background="@color/white">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/ic_left"
                    app:iconTint="@color/cos_black"
                    app:iconSize="24dp"
...
                    android:text="2025.12.25 17:32"
                    android:textSize="12sp"
                    android:textColor="@color/cos_grey"
                    android:fontFamily="@font/arita_medium" />

                <EditText
                    android:id="@+id/et_diary_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="오늘 하루는 어땠나요?"
...
