...
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.diary.view.DiaryListFragment"
    android:paddingHorizontal="17dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_diary"
        tools:listitem="@layout/item_diary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- empty view -->
    <LinearLayout
...
