<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.view.OnboradingContainerFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/circle_indicator"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:ci_drawable="@drawable/brand_radius"
        app:ci_drawable_unselected="@drawable/gray_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="73dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>