...
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_egobook"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:text="에고북 시작하기"
        android:textSize="12sp"
...
